Use my images - I'm a photographer afterall

--- a/talks/index.html
+++ b/talks/index.html
@@ -2,7 +2,12 @@
 layout: post-index
 title: All Talks
 excerpt: A List of Talks
+image:
+  feature: features/tiesto.jpg
+  credit: Miha Rekar - Tiësto @ Ultra 2014
+  creditlink: http://mr.si/
 ---
+
 <h1>{{ page.title }}</h1>
 {% for post in site.categories.talks %}
 {% unless post.next %}
