--- a/posts.html
+++ b/posts.html
@@ -5,7 +5,7 @@ excerpt: A List of Posts
 image:
   feature: features/paul-van-dyk.jpg
   credit: Miha Rekar - Paul van Dyk @ Ultra 2014
-  creditlink: http://mr.si/
+  creditlink: https://mr.si/
 ---
 
 <h1>{{ page.title }}</h1>
