--- a/talks.html
+++ b/talks.html
@@ -5,7 +5,7 @@ excerpt: A List of Talks
 image:
   feature: features/tiesto.jpg
   credit: Miha Rekar - Tiësto @ Ultra 2014
-  creditlink: http://mr.si/
+  creditlink: https://mr.si/
 ---
 
 <h1>{{ page.title }}</h1>
